--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="/libTTS"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/stpa/Downloads/java/adt-bundle-windows-x86_64-20140702/sdk/platforms/android-10/android.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="file:/C:/Users/stpa/Downloads/java/adt-bundle-windows-x86_64-20140702/sdk/docs/reference"/>
@@ -14,5 +13,6 @@
 			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
 		</accessrules>
 	</classpathentry>
+	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
