--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,6 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ActivitySightingList"
+            android:label="@string/app_name" >
+        </activity>
     </application>
 
 </manifest>
