lots of refactoring, added new list to display unique devices, not yet tested

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ActivitySightingList"
+            android:name=".ActivityListView"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
         </activity>
