--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -35,7 +35,11 @@
         <activity
             android:name=".ActivityListView"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".ActivityCalendar"
+            android:label="@string/title_activity_activity_calendar" >
         </activity>
     </application>
 
