--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,8 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <!-- for writing database backups to external storage. -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- for setting the system's date and time -->
+    <uses-permission android:name="android.permission.SET_TIME" />
 
     <application
         android:name=".AppBlauzahn"
